[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
futures = "0.3"
h3 = { version = "0.0.8", features = ["tracing"] }
h3-quinn = { version = "0.0.10", features = ["tracing", "datagram"] }
h3-webtransport = { version = "0.1.2" }
h3-datagram = { version = "0.0.2" }
http = "1.0"
octets = "0.3"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
rcgen = "0.14.2"
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "aws_lc_rs",
    "std",
] }
rustls-native-certs = "0.8.1"
structopt = "0.3"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
tracing-tree = "0.4"

[features]
tree = []