[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11.8"
h3 = "0.0.8"
h3-quinn = "0.0.10"
h3-webtransport = "0.1.2"
rcgen = "0.14"
rustls = "0.23"
http = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures-util = "0.3"
rustls-pemfile = "2.2.0"
bytes = "1.10.1"
rustls-pki-types = "1.12.0"